# perfx

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/rules/: summary.mdc
configs/: basic.yaml  evm_evaluation.yaml  evm_evaluation_with_repos.yaml  my_config.yaml  simple_repo_test.yaml  test_evaluation.yaml
eval-evm-summary/: PERFORMANCE_ANALYSIS_GUIDE.md  PERFORMANCE_COMPARISON_GUIDE.md  README.md  evm_summarization.yaml  generate_analysis_report.py  process_concrete_performance.py  process_step3_data.py  process_step4_data.py  setup_macos_env.py  summarize_evaluator.py
eval-evm-summary/eval/: README.md  __init__.py  __main__.py  data_processor.py  evaluate_summarize.py  evaluation_recorder.py  kevm_builder.py  test_runner.py  utils.py
perfx/: __init__.py  __main__.py  cli.py
perfx/config/: __init__.py  manager.py
perfx/core/: __init__.py  dependency_manager.py  executor.py  processor.py  recorder.py  repository_manager.py  visualization_processor.py
perfx/parsers/: __init__.py  base.py  enhanced.py  pytest.py
perfx/trash/: analysis_engine.py  analysis_processor.py  cli_analysis.py  (+2 more)
results/: .dependency_cache.json  evaluation_results.json
tests/: __init__.py  conftest.py  mock_data.py  test_basic.py  test_cleanup.py  test_cli.py  test_conditions.py  test_config_manager.py  test_dependency_manager.py  test_enhanced_integration.py  test_executor.py  test_file_manager.py  test_generate_mocks.py  test_integration.py  test_parsers.py  test_processor.py  test_realistic_mocks.py  test_recorder.py  test_repository_manager.py  test_visualizers.py
trash/: final_verification.py  test_duration_parsing.py  test_pytest_parser.py  verify_parser_results.py
(+32 files in other folders)
